recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:4: error: ';' expected but 'else' found.
    } else  {
      ^Sierpinski:14: error: expected class or object definition
def sierpinski(level:Int, length:Double) {
^Sierpinski:22: error: expected start of definition
	override def run() {
                 ^Sierpinski:26: error: Unmatched closing brace '}' ignored here
}
^