recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def draw(level:Int, length:Double) {
    if(level==0)
     avance(length)
    droite(120)
    } else  {
    draw(level-1,length/2)
    droite(120)
 		draw(level-1,length/2)
  	droite(120)
 		draw(level-1,length/2)
    droite(120)
 		draw(level-1,length)
	}
}
def sierpinski(level:Int, length:Double) {
	for (i<-0 to 2) {
    draw()
    droite(120)
  }
}